WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26852
[Chromium] Fix a minor build issue with DOM Storage
https://bugs.webkit.org/show_bug.cgi?id=26852
Summary
[Chromium] Fix a minor build issue with DOM Storage
Jeremy Orlow
Reported
2009-06-30 12:16:57 PDT
Fix some minor build issues in the v8 bindings.
Attachments
patch v1
(3.22 KB, patch)
2009-06-30 12:17 PDT
,
Jeremy Orlow
levin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Orlow
Comment 1
2009-06-30 12:17:56 PDT
Created
attachment 32082
[details]
patch v1 Fix minor build issues with DOM Storage in Chromium.
David Levin
Comment 2
2009-06-30 13:31:38 PDT
Comment on
attachment 32082
[details]
patch v1 This is essentially a build fix for when DOM_STORAGE is enabled.
David Levin
Comment 3
2009-06-30 14:17:02 PDT
Committed as
http://trac.webkit.org/changeset/45394
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug