2009-06-30  Jeremy Orlow (jorlow@chromium.org)

Reviewed by David Levin.

        https://bugs.webkit.org/show_bug.cgi?id=26852

        Fix some minor build issues in the v8 bindings.

        * bindings/v8/custom/V8StorageCustom.cpp:
        (WebCore::V8Custom::v8StorageNamedPropertyEnumerator):
        (WebCore::storageGetter):
        (WebCore::storageSetter):
        (WebCore::storageDeleter):
        * storage/StorageArea.cpp:

Canonical link: https://commits.webkit.org/37071@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45394 268f45cc-cd09-0410-ab3c-d52691b4dbfc