WebCore/bindings/v8/custom/V8StorageCustom.cpp
@@ -42,7 +42,7 @@ namespace WebCore {
 // Get an array containing the names of indexed properties in a collection.
 v8::Handle<v8::Array> V8Custom::v8StorageNamedPropertyEnumerator(const v8::AccessorInfo& info)
 {
-    Storage* storage = V8Proxy::ToNativeObject<Storage>(V8ClassIndex::STORAGE, info.Holder());
+    Storage* storage = V8Proxy::convertToNativeObject<Storage>(V8ClassIndex::STORAGE, info.Holder());
     unsigned int length = storage->length();
     v8::Handle<v8::Array> properties = v8::Array::New(length);
     for (unsigned int i = 0; i < length; ++i) {
@@ -58,7 +58,7 @@ v8::Handle<v8::Array> V8Custom::v8StorageNamedPropertyEnumerator(const v8::Acces
 
 static v8::Handle<v8::Value> storageGetter(v8::Local<v8::String> v8Name, const v8::AccessorInfo& info)
 {
-    Storage* storage = V8Proxy::ToNativeObject<Storage>(V8ClassIndex::STORAGE, info.Holder());
+    Storage* storage = V8Proxy::convertToNativeObject<Storage>(V8ClassIndex::STORAGE, info.Holder());
     String name = toWebCoreString(v8Name);
 
     if (storage->contains(name))
@@ -82,7 +82,7 @@ NAMED_PROPERTY_GETTER(Storage)
 
 static v8::Handle<v8::Value> storageSetter(v8::Local<v8::String> v8Name, v8::Local<v8::Value> v8Value, const v8::AccessorInfo& info)
 {
-    Storage* storage = V8Proxy::ToNativeObject<Storage>(V8ClassIndex::STORAGE, info.Holder());
+    Storage* storage = V8Proxy::convertToNativeObject<Storage>(V8ClassIndex::STORAGE, info.Holder());
     String name = toWebCoreString(v8Name);
     String value = toWebCoreString(v8Value);
 
@@ -117,7 +117,7 @@ NAMED_PROPERTY_SETTER(Storage)
 
 static v8::Handle<v8::Boolean> storageDeleter(v8::Local<v8::String> v8Name, const v8::AccessorInfo& info)
 {
-    Storage* storage = V8Proxy::ToNativeObject<Storage>(V8ClassIndex::STORAGE, info.Holder());
+    Storage* storage = V8Proxy::convertToNativeObject<Storage>(V8ClassIndex::STORAGE, info.Holder());
     String name = toWebCoreString(v8Name);
     
     if (storage->contains(name)) {
